--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": "^8.1",
         "derekcodes/turnstile-laravel": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.4",
+        "intervention/image-laravel": "^1.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
