Fix: Image Compression [Done]

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "derekcodes/turnstile-laravel": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^3.4",
+        "intervention/image-laravel": "*",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
