Fix: Image Compressing system [Done]
Fixing the image compressing system and also adding LaravelBug.com monitor

--- a/.env.example
+++ b/.env.example
@@ -58,5 +58,10 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+IGNITION_EDITOR=
+
 TURNSTILE_SECRET_KEY=
 TURNSTILE_SITE_KEY=
+
+LB_KEY=
+LB_PROJECT_KEY=
